<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="forget_password">Password forgotten?</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="birthdate">Birthdate</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_naccount">Create\naccount</string>
    <string name="bg">BG</string>
    <string name="log_in">Log in</string>
    <string name="new_account">No account? Make one</string>
    <string name="login_mail">E-mail</string>
    <string name="welcome_back">Welcome</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="adress">Adress</string>
    <string name="log_existing">Already have an account? Login</string>
    <string name="recover_password">Recover password</string>
    <string name="send_e_mail">Send e-mail</string>
    <string name="menu">menu</string>
    <string name="user_image">User Image</string>
    <string name="logo">Logo</string>
    <string name="username">Youssef</string>
    <string name="email">youssef@gmail.com</string>
    <string name="manage">Manage account</string>
    <string name="logout">LOGOUT</string>
    <string name="open">Open Navigation Bar</string>
    <string name="close">Close Navigation Bar</string>
    <string name="google_maps_key">AIzaSyAd-VjF4BpkSGc-xK8RRj0yncnGosP-62g</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">iBTVSldbfjM2yuux2QBQKK8e1giP7oFjw2qpEOUY</string>
    <string name="back4app_client_key">NkAELVdWdoScPfsdk3dd9nyouWXVCpSpJ1INpxv7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="date_time"><![CDATA[Date & Time *]]></string>

</resources>
