<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomepageActivity"
    android:id="@+id/drawerlayout"
    tools:openDrawer="start"
    android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:id="@+id/menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/menu"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/menu"
                android:elevation="0dp"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/hbtext"
                android:contentDescription="@string/logo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/user_image"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:elevation="0dp"
                android:clickable="true"
                android:onClick="createUserDialog"
                android:contentDescription="@string/user_image"/>
        </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            app:menu="@menu/menu_elements"
            android:id="@+id/nav_menu"
            app:headerLayout="@layout/menu_header"
            android:layout_gravity="start"/>



</androidx.drawerlayout.widget.DrawerLayout>
