<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage_user_account.LoginActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_page_background"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="176dp"
            android:layout_weight="1"
            android:src="@drawable/healthbuddy"
            tools:ignore="ContentDescription,ImageContrastCheck" />
    </LinearLayout>

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/optRoundCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:optRoundCardLeftTopCorner="true"
        app:optRoundCardRightTopCorner="true"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false"
        app:optRoundCardCornerRadius="50dp"
        app:optRoundCardElevation="0dp"
        app:optRoundCardBackgroundColor="#006D77"
        app:layout_constraintBottom_toBottomOf="@+id/imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/login_mail"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="#EDF6F9"
                    android:textColorHint="#EDF6F9"
                    android:textStyle="bold"
                    tools:ignore="VisualLintTextFieldSize" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#5A5A5A" />

                <EditText
                    android:id="@+id/edPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="VisualLintTextFieldSize" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#5A5A5A" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_login_background"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="#455A64"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintButtonSize"
                    android:onClick="login"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:onClick="OpenForgetPage"
                    android:paddingTop="15dp"
                    android:text="@string/forget_password"
                    android:textColor="#edf6f9"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_add_account_background"
                    android:elevation="0dp"
                    android:text="@string/new_account"
                    android:textAllCaps="false"
                    android:textColor="#455A64"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="OpenSignupPage"
                    tools:ignore="VisualLintButtonSize" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#5A5A5A" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </com.github.captain_miao.optroundcardview.OptRoundCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/user_image"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/optRoundCardView"
        app:layout_constraintEnd_toEndOf="@+id/imageview"
        app:layout_constraintStart_toStartOf="@+id/imageview"
        app:layout_constraintTop_toTopOf="@+id/optRoundCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>