<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="453dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/closeBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="cancel"
                android:background="@android:color/transparent"
                android:src="@drawable/x"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="70dp"
                android:clickable="true"
                android:contentDescription="@string/user_image"
                android:elevation="0dp"
                android:src="@drawable/user_image"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="181dp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="Username"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_below="@+id/userImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="email@gmail.com"
                android:gravity="center"
                android:layout_below="@+id/username"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/manage_account"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/button_login_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="OpenManageAccount"
                android:text="@string/manage"
                android:textAllCaps="false"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/detail_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                tools:ignore="MissingConstraints,VisualLintButtonSize" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@drawable/logout_button_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="logout"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/manage_account"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints,VisualLintButtonSize" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>