<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".appointments.analysis_appointments.AnalysisAppointmentActivity"
android:id="@+id/drawerlayout"
tools:openDrawer="start"
android:fitsSystemWindows="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_marginTop="40dp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/hbtext"
        android:contentDescription="@string/logo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/user_image"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="12dp"
        android:elevation="0dp"
        android:clickable="true"
        android:onClick="createUserDialog"
        android:contentDescription="@string/user_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/logo"
        android:orientation="vertical">

        <EditText
            android:id="@+id/DocName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/check_circle"
            android:drawableTint="#696969"
            android:hint="Analysis name *"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="#191919"
            android:textColorHint="#696969"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="#696969" />
        <Spinner
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:padding="15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectedDateTime"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:text="yyyy-MM-dd hh:mm a"
            android:textSize="28dp"/>

        <EditText
            android:id="@+id/edDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/calendar"
            android:drawableTint="#696969"
            android:hint= "@string/date_time"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:padding="15dp"
            android:textColor="#191919"
            android:textColorHint="#696969"
            android:textStyle="bold"
            tools:ignore="VisualLintTextFieldSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(*) Required"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="60dp"
        android:background="#696969">
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:text="Save &amp; Close"
            android:background="@drawable/button_signin_background"/>
    </RelativeLayout>
</RelativeLayout>

<com.google.android.material.navigation.NavigationView
    android:layout_width="300dp"
    android:layout_height="match_parent"
    app:menu="@menu/menu_elements"
    android:id="@+id/nav_menu"
    app:headerLayout="@layout/menu_header"
    android:layout_gravity="start"
    android:paddingBottom="40dp"/>


</androidx.drawerlayout.widget.DrawerLayout>
